[gd_scene load_steps=9 format=3 uid="uid://biorrc606j8kw"]

[ext_resource type="Script" path="res://Lvl7/white_principal/white_principal.gd" id="1_0tlp6"]
[ext_resource type="Texture2D" uid="uid://bqreeej42wonk" path="res://Lvl7/Assets/Wizzards.png" id="2_oh1td"]
[ext_resource type="PackedScene" uid="uid://dj00wi4tdmmu7" path="res://Lvl7/white_principal/wp_bullet/wp_bullet.tscn" id="2_x2a3c"]
[ext_resource type="PackedScene" uid="uid://be6ldvq0uxod7" path="res://Lvl7/white_principal/wp_damage_wave/wp_damage_wave.tscn" id="3_2ajut"]

[sub_resource type="AtlasTexture" id="AtlasTexture_mrvqb"]
atlas = ExtResource("2_oh1td")
region = Rect2(256, 0, 256, 256)

[sub_resource type="SpriteFrames" id="SpriteFrames_tocg8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mrvqb")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_11k8q"]
radius = 26.0
height = 124.0

[sub_resource type="CircleShape2D" id="CircleShape2D_t01vv"]
radius = 309.233

[node name="white_principal" type="CharacterBody2D"]
script = ExtResource("1_0tlp6")
wp_bullet = ExtResource("2_x2a3c")
wp_damage_wave = ExtResource("3_2ajut")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(0.00012207, 0)
scale = Vector2(0.53125, 0.59375)
sprite_frames = SubResource("SpriteFrames_tocg8")
animation = &"idle"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
texture_filter = 1
position = Vector2(2, 5)
shape = SubResource("CapsuleShape2D_11k8q")

[node name="detector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="detector"]
position = Vector2(1, 2)
shape = SubResource("CircleShape2D_t01vv")

[node name="Node" type="Node" parent="."]

[node name="Marker2D" type="Marker2D" parent="Node"]

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0

[node name="Timer2" type="Timer" parent="."]
wait_time = 3.0

[node name="Timer3" type="Timer" parent="."]
wait_time = 15.0

[connection signal="body_entered" from="detector" to="." method="_on_detector_body_entered"]
[connection signal="body_exited" from="detector" to="." method="_on_detector_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
[connection signal="timeout" from="Timer3" to="." method="_on_timer_3_timeout"]
